--- a/FontEnd/src/pages/register.css
+++ b/FontEnd/src/pages/register.css
@@ -13,7 +13,7 @@
     padding-top: 50px !important;
     padding-bottom: 50px !important;
 }
-input[type=text]{
+/* input[type=text]{
 	border-bottom: 1px;
   }
 input[type=email]{
@@ -21,7 +21,7 @@ input[type=email]{
   }
 input[type=password]{
 	border-bottom: F6F6F6 solid 1px!important;
-  }
+  } */
 .redStar{
 	color: red;
 	font-size: 20px;
