--- a/FontEnd/src/pages/checkout.css
+++ b/FontEnd/src/pages/checkout.css
@@ -9,6 +9,14 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.backgroundContainerCheckout1{
+    background-color: white;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 .paddingLable{
     padding-top: 8px;
 }
@@ -95,6 +103,9 @@
 .paddingBottomRadio{
     padding-bottom: 20px;
 }
+.paddingBottomRadioWalletCard{
+    margin-bottom: 20px;
+}
 .containerBoderVisaCard{
     border: 0.1px solid rgb(195, 195, 195);
     border-radius: 10px;
@@ -109,6 +120,33 @@
 }
 .h2Visa{
     color: white;
-    padding-top: 10px;
-}
+    padding-top: 5px;
 
+}
+.imgChipSize{
+    max-width:40px;
+    max-height:40px;
+    width: auto;
+    height: auto;
+    margin-top: 0px;
+}
+.pIdCard{
+    font-size: 23px;
+    color: white;
+    font-family: 'Calibri';
+    padding-top: 3px;
+    margin-bottom: 5px;
+}
+.pNameUserCard{
+    font-size: 18px;
+    color: aliceblue;
+    font-family: 'Calibri';
+    margin-bottom: 0px;
+}
+.pNameValidDateCard{
+    font-size: 18px;
+    color: aliceblue;
+    font-family: 'Calibri';
+    margin-bottom: 0px;
+    text-align: right;
+}
