Update cấu trúc thư mục React

--- a/FontEnd/src/pages/login/login.css
+++ b/FontEnd/src/pages/login/login.css
@@ -1,5 +1,5 @@
 .data-background-login{
-    background-image: url("../img/hero/category.jpg");
+    background-image: url("../../img/hero/category.jpg");
 }
 .loginbackground{
     background-color: #F4F4F4;
