--- a/FontEnd/src/pages/productList/productList.css
+++ b/FontEnd/src/pages/productList/productList.css
@@ -96,7 +96,7 @@ body {
   margin-top: 15px !important;
 }
 .data-background-productlist{
-  background-image: url("../img/hero/category.jpg")
+  background-image: url("../../img/hero/category.jpg")
 }
 .backGroundProductList{
     background-color: #F6F6F6;
