--- a/FontEnd/src/pages/profile/profile.css
+++ b/FontEnd/src/pages/profile/profile.css
@@ -5,7 +5,7 @@
     content: " ▴";
 } */
 .data-background-profile{
-    background-image: url("../img/hero/category.jpg");
+    background-image: url("../../img/hero/category.jpg");
 }
 .alignContainerMain{
     padding-top: 30px;
