--- a/FontEnd/src/pages/register/register.css
+++ b/FontEnd/src/pages/register/register.css
@@ -104,7 +104,7 @@ input[type=password]{
 	background-color: #F6F6F6;
 }
 .data-background-register{
-    background-image: url("../img/hero/category.jpg");
+    background-image: url("../../img/hero/category.jpg");
 }
 .backgrounsColorRegisterForm{
 	background-color: white;
