--- a/FontEnd/public/SkyTheme/css/style.css
+++ b/FontEnd/public/SkyTheme/css/style.css
@@ -546,9 +546,9 @@ strong {
 dfn {
   font-style: italic; }
 
-h1 {
+/* h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0; } */
 
 mark {
   background-color: #ff0;
