--- a/FontEnd/src/pages/page404/page404.css
+++ b/FontEnd/src/pages/page404/page404.css
@@ -44,7 +44,7 @@
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
             transform: translateX(-50%);
-    background: url('../img//errorPage/404.jpg') no-repeat;
+    background: url('../../img/errorPage/404.jpg') no-repeat;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: cover;
