--- a/FontEnd/src/pages/profile/profile.css
+++ b/FontEnd/src/pages/profile/profile.css
@@ -34,10 +34,10 @@
     border-color: #00B1FF; 
 }
 
-.inputTemp{
+/* .inputTemp{
     border-bottom: 0% !important;
 
-}
+} */
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: black;
     /* background-color: #007bff; */
