--- a/FontEnd/src/pages/register/register.css
+++ b/FontEnd/src/pages/register/register.css
@@ -35,21 +35,21 @@ input[type=password]{
 	margin-bottom: 35px;
 }
 
-.register-form form .group-input,
-.login-form form .group-input {
+.register-form form1 .group-input,
+.login-form form1 .group-input {
 	margin-bottom: 25px;
 }
 
-.register-form form .group-input label,
-.login-form form .group-input label {
+.register-form form1 .group-input label,
+.login-form form1 .group-input label {
 	display: block;
 	font-size: 18px;
 	color: #252525;
 	margin-bottom: 13px;
 }
 
-.register-form form .group-input input,
-.login-form form .group-input input {
+.register-form form1 .group-input input,
+.login-form form1 .group-input input {
 	border: 1px solid #ebebeb;
 	height: 50px;
 	width: 100%;
@@ -57,8 +57,8 @@ input[type=password]{
 	padding-right: 15px;
 }
 
-.register-form form .register-btn,
-.register-form form .login-btn,
+.register-form form1 .register-btn,
+.register-form form1 .login-btn,
 .login-form form .register-btn,
 .login-form form .login-btn {
 	width: 100%;
