--- a/FontEnd/src/container/header.css
+++ b/FontEnd/src/container/header.css
@@ -1,36 +1,404 @@
-.img{
-    max-width: 100% !important;
+.img {
+  max-width: 100% !important;
 }
-.btnUser{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 1px solid;
-    border-color: #379AF4;
-    margin-left: 25px;
-    margin-top: -5px;
+.btnUser {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px solid;
+  border-color: #379af4;
+  margin-left: 25px;
+  margin-top: -5px;
 }
-.btnUser:hover{
-    cursor: pointer;
+.btnUser:hover {
+  cursor: pointer;
 }
-.btnChevron-down{
-    width: 20;
-    height: 20;
-    margin-left: -15px;
+.btnChevron-down {
+  width: 20;
+  height: 20;
+  margin-left: -15px;
 }
-.colorBackGrou{
-    background-color: white;
-    width: 60px;
-    height: 60px;
+.colorBackGrou {
+  background-color: white;
+  width: 60px;
+  height: 60px;
 }
-.nameHeader{
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-right: 10px;
-    font-size: 16px;
-    color: #379AF4;
+.nameHeader {
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-right: 10px;
+  font-size: 16px;
+  color: #379af4;
 }
-.btnLogout{
-    margin-left: 23px;
+.btnLogout {
+  margin-left: 23px;
+  margin-top: 10px;
+}
+@media only screen and (min-width: 1920px) {
+  .form-box {
+    width: 100% !important;
+  }
+  .searchRight {
+    margin-right: 70px;
+  }
+  .navPa {
+    display: none;
+  }
+  .header-right {
+    margin-left: -10px;
+  }
+  .favorit-items {
+    margin-left: 50px;
+    width: 50px;
+  }
+  .quantityFavorit {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    margin-left: 10px;
+    position: inherit;
+  }
+  .quantityCart {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    position: inherit;
+    margin-left: 15px;
+  }
+  .marginQuantity {
+    margin-right: -215px;
+  }
+  .quantityCartNotLogin {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    position: inherit;
+    margin-right: -100px;
+  }
+}
+@media only screen and (min-width: 1280px) and (max-width: 1366px) {
+  .form-box{
+    width: 100% !important;
+  }
+  .header-right {
+    margin-left: -10px;
+  }
+  .favorit-items {
+    margin-left: 50px;
+    width: 50px;
+  }
+  .quantityFavorit {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    margin-left: 10px;
+    position: inherit;
+  }
+  .quantityCart {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    position: inherit;
+    margin-left: 15px;
+  }
+  .marginQuantity {
+    margin-right: -205px;
+  }
+  .quantityCartNotLogin {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    position: inherit;
+    margin-right: -90px;
+  }
+  .dropDownMargin {
     margin-top: 10px;
+    margin-right: 10%;
+  }
+  .navPa {
+    display: none;
+  }
+  .favorit-items {
+    margin-left: 50px;
+    width: 50px;
+  }
+  .searchRight {
+    margin-right: 70px;
+    margin-top: 2px;
+  }
+}
+@media only screen and (max-width: 376px) and (max-width: 414px) {
+  .favorit-items {
+    margin-left: 50px;
+    width: 50px;
+  }
+  .quantityFavorit {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    margin-top: 10px;
+    margin-left: 10px;
+    position: inherit;
+  }
+  .quantityCart {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    margin-top: 10px;
+    position: inherit;
+    margin-left: 15px;
+  }
+  .marginQuantity {
+    margin-right: -210px;
+  }
+  .shopping-card {
+    width: 60px;
+  }
+
+  .header-sticky {
+    position: inherit;
+  }
+  .mobile_menu {
+    display: none !important;
+  }
+  .navPa {
+    font-size: 20px;
+  }
+  .logo {
+    display: none;
+  }
+  .none-mobile {
+    display: none;
+  }
+  .favorit-items {
+    margin-top: 13px;
+  }
+  .shopping-card {
+    margin-top: 13px;
+  }
+  .header-area .header-bottom {
+    padding: 0px 0px;
+  }
+  .btnLogout {
+    margin-top: 0px;
+  }
+  .contentLogin {
+    width: 414px;
+    height: 60px;
+    background-color: #f72b3f;
+    color: white;
+    margin-left: -15px;
+    padding-top: 15px;
+    border-radius: 15px;
+  }
+  .loginPa {
+    padding-left: 20px;
+  }
+  .fixImg {
+    height: 62px;
+    width: auto;
+    background-color: #f8f9fa;
+    margin-top: -16px;
+  }
+  .nameProfile {
+    width: 414px;
+    border-radius: 15px;
+    height: 68px;
+    font-size: 25px;
+    color: white !important;
+    background-color: #379af4;
+    margin-left: -16px;
+    text-align: center;
+  }
+  .btnUser {
+    margin-right: 10px;
+    margin-left: 0px;
+  }
+  .hrS {
+    width: 380px;
+    border-width: thin;
+    border-style: dashed;
+    border-color: #e2e2e2;
+  }
+  .searchBtn {
+    margin-left: -25px;
+  }
+  .searchInput {
+    margin-left: -5px;
+    border-radius: 15px;
+  }
+  .nameTag {
+    position: absolute;
+  }
+}
+@media only screen and (max-width: 375px) {
+  .mobile_menu {
+    display: none !important;
+  }
+  .dropdown-menu {
+    margin-right: 35px;
+    font-size: 20px;
+  }
+  .favorit-items {
+    margin-left: 50px;
+    width: 50px;
+  }
+  .quantityFavorit {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    margin-top: 10px;
+    margin-left: 10px;
+    position: inherit;
+  }
+  .quantityCart {
+    background: #00b1ff;
+    color: #fff;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 22px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    font-weight: 600;
+    margin-top: 10px;
+    position: inherit;
+    margin-left: 15px;
+  }
+  .marginQuantity {
+    margin-right: -210px;
+  }
+  .shopping-card {
+    width: 60px;
+  }
+  .navPa {
+    font-size: 20px;
+  }
+  .logo {
+    display: none;
+  }
+  .none-mobile {
+    display: none;
+  }
+  .favorit-items {
+    margin-top: 13px;
+  }
+  .shopping-card {
+    margin-top: 13px;
+  }
+  .header-area .header-bottom {
+    padding: 0px 0px;
+  }
+  .btnLogout {
+    margin-top: 0px;
+  }
+  .contentLogin {
+    width: 375px;
+    height: 60px;
+    background-color: #f72b3f;
+    color: white;
+    margin-left: -15px;
+    padding-top: 15px;
+    border-radius: 15px;
+  }
+  .loginPa {
+    padding-left: 5px;
+  }
+  .fixImg {
+    height: 62px;
+    width: auto;
+    background-color: #f8f9fa;
+    margin-top: -16px;
+  }
+  .nameProfile {
+    width: 375px;
+    border-radius: 15px;
+    height: 68px;
+    font-size: 25px;
+    color: white !important;
+    background-color: #379af4;
+    margin-left: -16px;
+    text-align: center;
+  }
+  .btnUser {
+    margin-right: 10px;
+    margin-left: 0px;
+  }
+  .hrS {
+    width: 380px;
+    border-width: thin;
+    border-style: dashed;
+    border-color: #e2e2e2;
+  }
+  .searchBtn {
+    margin-left: -55px;
+  }
+  .searchInput {
+    margin-left: -5px;
+    border-radius: 15px;
+  }
 }
