--- a/FontEnd/src/pages/productList/productList.css
+++ b/FontEnd/src/pages/productList/productList.css
@@ -57,8 +57,8 @@ body {
   padding: 0.25rem 0.25rem;
 }
 .boderimg_Pro {
-  border:0.1px solid ;
-  border-color:rgb(212, 212, 212);
+  border: 0.1px solid;
+  border-color: rgb(212, 212, 212);
 }
 .aHeart {
   color: #4caf50 !important;
@@ -95,50 +95,406 @@ body {
   color: #ff0000;
   margin-top: 15px !important;
 }
-.data-background-productlist{
-  background-image: url("../../img/hero/category.jpg")
+.data-background-productlist {
+  background-image: url("../../img/hero/category.jpg");
 }
-.backGroundProductList{
-    background-color: #F6F6F6;
-    padding-bottom: 20px !important;
+.backGroundProductList {
+  background-color: #f6f6f6;
+  padding-bottom: 20px !important;
 }
-.paddingLeftStrong{
+.paddingLeftStrong {
   padding-left: 20px;
 }
-.cardPaddingBottom{
+.cardPaddingBottom {
   padding-left: 5px;
   padding-right: 5px;
 }
-.borderNoneCardProduct{
+.borderNoneCardProduct {
   border: none;
 }
-.backgroundLeftCategory{
+.backgroundLeftCategory {
   background-color: white;
   padding-top: 20px;
   padding-left: 15px;
   margin-top: 10px;
-
+  border-radius: 10px;
 }
-.pFontSize{
+.pFontSize {
   font-size: 20px !important;
 }
-.backgroundRow{
+.backgroundRow {
   background-color: white !important;
 }
-.margin_card_body{
+.margin_card_body {
   margin-left: 5px;
   margin-right: 5px;
   margin-bottom: 10px;
 }
-.padding_card_body{
+.padding_card_body {
   padding-top: 10px;
   padding-left: 5px;
   padding-right: 5px;
   padding-bottom: 10px;
 }
-.cardMarginTop{
+.cardMarginTop {
   margin-top: 10px !important;
 }
-.containerMainMarginTop{
+.containerMainMarginTop {
   margin-top: 15px !important;
 }
+.rightList {
+  padding-right: 0px;
+}
+@media only screen and (max-width: 4096px) {
+  .tagFilter {
+    font-family: Open Sans, sans-serif;
+    font-size: 25px;
+    font-weight: 600;
+    color: #626262;
+
+  }
+  .btnFilter{
+    width: auto;
+    height: 40px;
+    border: 1px solid;
+    border-color: #adadad;
+    font-size: 14px;
+    padding-top: 7px;
+    margin-left: -40px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+  .btnFilter:hover{
+    background-color: dodgerblue;
+    color: white;
+    border-color: white;
+  }
+  .marginSelling{
+    margin-left: -30px;
+  }
+  .marginIncrease{
+    margin-left: -90px;
+  }
+  .marginDecrease{
+    margin-left: -125px;
+  }
+  .nameFilter{
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 20px;
+  }
+  .marginInputLeft{
+    margin-top: 15px;
+    margin-bottom: 15;
+    margin-left: -155px;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputRight{
+    margin-top: 15px;
+    margin-bottom: 15;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputAAA{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px 10px;
+  }
+  .displayInput{
+    margin-top: 1px;
+    display: inline-flex;
+  }
+  .boderRaFilter{
+    border-radius: 10px;
+    margin-top: 10px;
+  }
+  .btnSearchPrice{
+    width: auto;
+    height: 35px;
+    font-size: 16px;
+    background-color: dodgerblue;
+    margin-top: 16px;
+    margin-left: 10px;
+    padding-top: 5px;
+    color: white;
+    font-weight: 600;
+  }
+  .btnSearchPrice:hover{
+    background-color: rgb(6, 92, 179);
+  }
+}
+
+@media only screen and (max-width: 1366px) {
+  .tagFilter {
+    font-family: Open Sans, sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    color: #626262;
+  }
+  .btnFilter{
+    width: auto;
+    height: 40px;
+    border: 1px solid;
+    border-color: #adadad;
+    font-size: 14px;
+    padding-top: 7px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: -5px;
+  }
+  .btnFilter:hover{
+    background-color: dodgerblue;
+    color: white;
+    border-color: white;
+  }
+  .marginSelling{
+    margin-left: 45px;
+  }
+  .marginIncrease{
+    margin-left: 25px;
+  }
+  .marginDecrease{
+    margin-left: 30px;
+  }
+  .nameFilter{
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 20px;
+  }
+  .displayInput{
+    margin-top: 50px;
+    margin-bottom: 10px;
+    margin-left: -31.2rem;
+    display: inline-flex;
+  }
+  .marginInputLeft{
+    margin-top: 15px;
+    margin-bottom: 15;
+    margin-left: -155px;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputRight{
+    margin-top: 15px;
+    margin-bottom: 15;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputAAA{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px 10px;
+  }
+  
+  .boderRaFilter{
+    border-radius: 10px;
+    margin-top: 10px;
+  }
+  .btnSearchPrice{
+    width: auto;
+    height: 35px;
+    font-size: 16px;
+    background-color: dodgerblue;
+    margin-top: 16px;
+    margin-left: 10px;
+    padding-top: 5px;
+    color: white;
+    font-weight: 600;
+  }
+  .btnSearchPrice:hover{
+    background-color: rgb(6, 92, 179);
+  }
+}
+.hoverTitleProduct:hover{
+  color: #ff0000;
+}
+
+@media only screen and (min-width: 376px) and (max-width: 414px){
+  .backgroundLeftCategory{
+    display: none;
+  }
+  .boderRaFilter{
+    border-radius: 10px;
+    margin-top: 10px;
+    width: 375px;
+    margin-left: 5px;
+  }
+  .btnFilter{
+    width: auto;
+    height: 40px;
+    border: 1px solid;
+    border-color: #adadad;
+    font-size: 13px;
+    padding-top: 7px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 45px;
+  }
+  .btnFilter:hover{
+    background-color: dodgerblue;
+    color: white;
+    border-color: white;
+  }
+  .marginSelling{
+    margin-left: 150px;
+  }
+  .marginIncrease{
+    margin-left: -5.3rem;
+    margin-top: 70px;
+  }
+  .marginDecrease{
+    margin-top: 70px;
+    margin-left: -5px;
+  }
+  .nameFilter{
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 20px;
+    margin-right: -80px;
+  }
+  .displayInput{
+    margin-top: 110px;
+    margin-bottom: 10px;
+    margin-left: -6rem;
+    display: inline-flex;
+    font-size: 14px;
+  }
+  .marginInputLeft{
+    margin-top: 15px;
+    margin-bottom: 15;
+    margin-left: -155px;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputRight{
+    margin-top: 15px;
+    margin-bottom: 15;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputAAA{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px 10px;
+  }
+  .btnSearchPrice{
+    width: auto;
+    height: 35px;
+    font-size: 16px;
+    background-color: dodgerblue;
+    margin-top: 16px;
+    margin-left: 10px;
+    padding-top: 5px;
+    color: white;
+    font-weight: 600;
+  }
+  .btnSearchPrice:hover{
+    background-color: rgb(6, 92, 179);
+  }
+  .sizeCard{
+    width: 375px !important;
+  }
+}
+
+@media only screen and (max-width: 375px){
+  .backgroundLeftCategory{
+    display: none;
+  }
+  .boderRaFilter{
+    border-radius: 10px;
+    margin-top: 10px;
+    width: 340px;
+  }
+  .nameFilter{
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 20px;
+    margin-right: -100px;
+    margin-left: 0px;
+  }
+  .btnFilter{
+    width: auto;
+    height: 40px;
+    border: 1px solid;
+    border-color: #adadad;
+    font-size: 13px;
+    padding-top: 7px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 90px;
+  }
+  .btnFilter:hover{
+    background-color: dodgerblue;
+    color: white;
+    border-color: white;
+  }
+  .marginSelling{
+    margin-top: 70px;
+    margin-left: -115px;
+  }
+  .marginIncrease{
+    margin-left: -4.7rem;
+    margin-top: 70px;
+  }
+  .marginDecrease{
+    margin-top: 70px;
+    margin-left: -15px;
+  }
+  
+  .displayInput{
+    margin-top: 110px;
+    margin-bottom: 10px;
+    margin-left: -8.2rem;
+    display: inline-flex;
+    font-size: 14px;
+  }
+  .marginInputLeft{
+    margin-top: 15px;
+    margin-bottom: 15;
+    margin-left: -155px;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputRight{
+    margin-top: 15px;
+    margin-bottom: 15;
+    font-size: 14px;
+    width: 100px;
+    padding: 0 8px !important;
+  }
+  .marginInputAAA{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 10px 10px;
+  }
+  .btnSearchPrice{
+    width: auto;
+    height: 35px;
+    font-size: 16px;
+    background-color: dodgerblue;
+    margin-top: 16px;
+    margin-left: 10px;
+    padding-top: 5px;
+    color: white;
+    font-weight: 600;
+  }
+  .btnSearchPrice:hover{
+    background-color: rgb(6, 92, 179);
+  }
+  .sizeCard{
+    width: 340px !important;
+  }
+}
+
